make tabs tabbable & fix visualizer visibility bug
fixed issue where visualizer would be set to non-visible for literal microseconds and causing borks, also made toggle tabs for dropdown and sidebar tabbable
also fixed layout undo not preserving group tile sizes

--- a/src/assets/common.css
+++ b/src/assets/common.css
@@ -92,7 +92,8 @@ label[button][disabled=true] {
 
 input:focus-visible,
 button:focus-visible,
-select:focus-visible {
+select:focus-visible,
+label[button]:focus-visible {
     outline-offset: 0px;
     outline: 2px solid white;
 }
